make test page and result page

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,35 @@
             <div
               class="test-grid"
               data-tests-grid
-            ></div>
+            >
+              <article class="ds-card ds-card--test">
+                <div class="ds-card__thumbnail">
+                  <div class="ds-card__thumbnail-inner"></div>
+                  <div class="ds-card__body">
+                    <h3>첫번째 테스트</h3>
+                    <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
+                  </div>
+                </div>
+              </article>
+              <article class="ds-card ds-card--test">
+                <div class="ds-card__thumbnail">
+                  <div class="ds-card__thumbnail-inner"></div>
+                  <div class="ds-card__body">
+                    <h3>두번째 테스트</h3>
+                    <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
+                  </div>
+                </div>
+              </article>
+              <article class="ds-card ds-card--test">
+                <div class="ds-card__thumbnail">
+                  <div class="ds-card__thumbnail-inner"></div>
+                  <div class="ds-card__body">
+                    <h3>세번째 테스트</h3>
+                    <p class="ds-card__tags">#해시태그#해시태그#해시태그</p>
+                  </div>
+                </div>
+              </article>
+            </div>
             <div class="section__footer">
               <button
                 class="ds-button ds-button--ghost"
