--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
       <main
         id="hero"
         class="site-main"
+        data-view="home"
       >
         <section class="hero">
           <div
