--- a/public/index.html
+++ b/public/index.html
@@ -59,33 +59,18 @@
         class="site-main"
         data-view="home"
       >
-        <section class="hero">
-          <div
-            class="hero__slider"
-            data-hero-slider
-          >
-            <button
-              class="slider-button slider-button--hero slider-button--prev"
-              type="button"
-              aria-label="이전 슬라이드"
-              data-hero-prev
-            >
-              ‹
-            </button>
-            <div
-              class="slider-track"
-              data-hero-track
-            >
-              <!-- Slides injected by JS -->
-            </div>
-            <button
-              class="slider-button slider-button--hero slider-button--next"
-              type="button"
-              aria-label="다음 슬라이드"
-              data-hero-next
-            >
-              ›
-            </button>
+        <section
+          class="hero"
+          aria-label="MBTI 여행 일러스트"
+        >
+          <div class="hero__image-wrapper">
+            <img
+              class="hero__image"
+              src="../assets/images/hero.png"
+              alt="집, 숲, 캠프 배경에 다양한 MBTI 캐릭터들이 모여 있는 일러스트"
+              loading="lazy"
+              decoding="async"
+            />
           </div>
         </section>
 
