Add header and footer logos; remove unused hero SVG
- Introduced new header and footer logo images for branding.
- Updated HTML to replace text logos with image elements.
- Removed the unused hero SVG file to clean up assets.
- Adjusted CSS for logo styling to ensure proper display.

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,12 @@
               href="#hero"
               aria-label="홈으로 이동"
             >
-              <span class="brand__text">LOGO</span>
+              <img
+                class="brand__logo"
+                src="../assets/images/headerLogo.png"
+                alt="MBTI ZOO 헤더 로고"
+                loading="lazy"
+              />
             </a>
             <div class="site-header__btn-box">
               <button
@@ -191,7 +196,12 @@
       <footer class="site-footer">
         <div class="site-footer__inner">
           <div class="site-footer__logo-box">
-            <div class="site-footer__logo">Logo</div>
+            <img
+              class="site-footer__logo"
+              src="../assets/images/footerLogo.png"
+              alt="MBTI ZOO 푸터 로고"
+              loading="lazy"
+            />
           </div>
         </div>
       </footer>
