Add new MBTI forum entries and enhance scrolling animation
- Introduced two new forum entries in the MBTI tests JSON data.
- Updated the HTML structure for the forum section to improve layout.
- Replaced manual feed controls with a CSS marquee animation for smoother scrolling.
- Refactored JavaScript to accommodate the new card creation method and removed unused functions related to manual controls.

--- a/public/index.html
+++ b/public/index.html
@@ -135,10 +135,7 @@
           aria-labelledby="forum-heading"
         >
           <div class="section__inner">
-            <div
-              class="section__header"
-              style="width: 373px"
-            >
+            <div class="section__header">
               <h2 id="forum-heading">16가지 MBTI, 다른 스타일?</h2>
             </div>
             <div class="mbti-panel">
