--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
               aria-label="메인 네비게이션"
             >
               <div class="site-header__nav">
-                <div class="site-header__nav-item">
+                <div class="site-header__nav-item site-header__nav-item--pill">
                   <button
                     class="ds-button ds-button--secondary site-header__nav-pill"
                     type="button"
@@ -56,7 +56,7 @@
                     나의 MBTI는?
                   </button>
                 </div>
-                <div class="site-header__nav-item">
+                <div class="site-header__nav-item site-header__nav-item--title">
                   <button
                     class="site-header__nav-title"
                     type="button"
@@ -66,7 +66,9 @@
                   </button>
                 </div>
                 <div class="site-header__auth-group">
-                  <div class="site-header__nav-item">
+                  <div
+                    class="site-header__nav-item site-header__nav-item--login"
+                  >
                     <button
                       class="ds-button ds-button--ghost site-header__auth-button site-header__auth-button--login"
                       type="button"
@@ -81,7 +83,9 @@
                       <span class="site-header__auth-label">로그인</span>
                     </button>
                   </div>
-                  <div class="site-header__nav-item">
+                  <div
+                    class="site-header__nav-item site-header__nav-item--register"
+                  >
                     <button
                       class="ds-button ds-button--ghost site-header__auth-button site-header__auth-button--register"
                       type="button"
