--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="./styles/global.css"
     />
+    <link
+      rel="stylesheet"
+      href="./styles/reset.css"
+    />
   </head>
   <body>
     <div class="page-shell">
