Refactor index.html and add new index.css for improved styling
- Updated index.html to link the new index.css file, replacing the previous global.css for better organization.
- Removed the MBTI forum section from index.html to streamline the layout.
- Introduced index.css with comprehensive styles for various components, enhancing the overall design and consistency of the application.

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     />
     <link
       rel="stylesheet"
-      href="./styles/global.css"
+      href="./styles/index.css"
     />
     <link
       rel="stylesheet"
@@ -198,71 +198,6 @@
                 />
                 더 많은 테스트
               </button>
-            </div>
-          </div>
-        </section>
-
-        <section
-          class="section section--forum"
-          aria-labelledby="forum-heading"
-        >
-          <div class="section__inner">
-            <div class="section__header">
-              <h2 id="forum-heading">16가지 MBTI, 다른 스타일?</h2>
-            </div>
-            <div class="mbti-panel">
-              <div class="mbti-grid-wrapper">
-                <ul
-                  class="mbti-grid"
-                  data-mbti-grid
-                  aria-label="MBTI 목록"
-                ></ul>
-                <ul
-                  class="mbti-grid mbti-grid--bottom"
-                  data-mbti-grid-bottom
-                  aria-label="MBTI 목록 하단"
-                ></ul>
-              </div>
-              <div
-                class="mbti-feed-slider"
-                data-mbti-feed-slider
-              >
-                <button
-                  class="slider-button slider-button--feed slider-button--prev"
-                  type="button"
-                  aria-label="이전 포럼 카드"
-                  data-mbti-feed-prev
-                  aria-hidden="true"
-                  tabindex="-1"
-                >
-                  <span aria-hidden="true">‹</span>
-                </button>
-                <div
-                  class="slider-track"
-                  data-mbti-feed-track
-                >
-                  <!-- Forum items injected by JS -->
-                </div>
-                <button
-                  class="slider-button slider-button--feed slider-button--next"
-                  type="button"
-                  aria-label="다음 포럼 카드"
-                  data-mbti-feed-next
-                  aria-hidden="true"
-                  tabindex="-1"
-                >
-                  <span aria-hidden="true">›</span>
-                </button>
-              </div>
-              <div class="forum-btn-wrapper">
-                <button
-                  class="ds-button ds-button--secondary"
-                  type="button"
-                  aria-label="오늘의 MBTI 포럼 보기"
-                >
-                  오늘의 MBTI 포럼
-                </button>
-              </div>
             </div>
           </div>
         </section>
