Add new MBTI test and update styles for improved user experience
- Introduced a new MBTI test titled "정밀 MBTI 100문항 검사" with a comprehensive set of questions and detailed scoring metrics.
- Updated index.json to include the new test entry and its corresponding path.
- Enhanced the styling of buttons and components in components.css for better visual consistency and user interaction.
- Modified index.html to include a new button for accessing the MBTI test directly.
- Implemented a new layout for displaying test results, including detailed metrics for each MBTI axis.
- Improved the quiz engine to calculate and display detailed results based on user responses, enhancing the overall functionality of the application.

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
                   <button
                     class="ds-button ds-button--secondary site-header__nav-pill"
                     type="button"
+                    data-primary-test-trigger
                     aria-label="나의 MBTI 확인"
                   >
                     나의 MBTI는?
